# minimath

./: LICENSE  README.md  pyproject.toml  version.py
.github/workflows/: release.yml
