[project]
name = "minimath-workspace"
version = "0.1.0rc2"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/minimath",
    "packages/minimath-cli",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
